# qhal

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc  qhal.cc  qhal.hh
